--- a/app/src/main/res/layout/fragment_count_up.xml
+++ b/app/src/main/res/layout/fragment_count_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CountUpFragment">
+    tools:context=".ui.CountUpFragment">
 
 
     <TextView
@@ -40,7 +40,7 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="8dp"
         android:text="ĐẶT LẠI"
         android:textColor="@color/blue_light"
         android:textSize="18dp"
