--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/action_alarms">
     <fragment
         android:id="@+id/action_alarms"
-        android:name="com.dungtran.alarmclock.AlarmFragment"
+        android:name="com.dungtran.alarmclock.ui.AlarmFragment"
         android:label="fragment_alarm"
         tools:layout="@layout/fragment_alarm" >
         <action
@@ -18,7 +18,7 @@
     </fragment>
     <fragment
         android:id="@+id/action_count_up"
-        android:name="com.dungtran.alarmclock.CountUpFragment"
+        android:name="com.dungtran.alarmclock.ui.CountUpFragment"
         android:label="fragment_count_up"
         tools:layout="@layout/fragment_count_up" >
         <action
@@ -30,7 +30,7 @@
     </fragment>
     <fragment
         android:id="@+id/action_count_down"
-        android:name="com.dungtran.alarmclock.CountDownFragment"
+        android:name="com.dungtran.alarmclock.ui.CountDownFragment"
         android:label="fragment_count_down"
         tools:layout="@layout/fragment_count_down" >
         <action
