--- a/app/src/main/res/layout/item_alarm.xml
+++ b/app/src/main/res/layout/item_alarm.xml
@@ -16,7 +16,7 @@
         android:padding="6dp">
 
         <TextView
-            android:id="@+id/item_alarm_time"
+            android:id="@+id/tv_item_alarm_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -26,7 +26,7 @@
             android:textSize="36sp"/>
 
         <TextView
-            android:id="@+id/item_calender"
+            android:id="@+id/tv_item_calender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -36,7 +36,7 @@
 
 
         <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/item_alarm_started"
+            android:id="@+id/switch_item_alarm_started"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
