--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,11 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_gravity="start"
         android:background="@color/white"
         app:itemTextColor="@drawable/item_selector"
+        app:itemIconTint="@drawable/item_selector"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,13 +47,14 @@
         app:layout_constraintVertical_bias="0.0"
         android:layout_width="0dp"
         android:layout_height="0dp">
+
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragments"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph"/>
+            app:navGraph="@navigation/nav_graph" />
     </FrameLayout>
 
 
