--- a/app/src/main/res/layout/fragment_set_alarm.xml
+++ b/app/src/main/res/layout/fragment_set_alarm.xml
@@ -57,20 +57,20 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:paddingLeft="15dp"
-                android:text="Ngày mai-T.5, 16 Th9"
+                android:text="Hôm nay"
                 android:textColor="@color/black"
                 android:textSize="15dp" />
 
             <Button
                 android:id="@+id/btn_recurring"
-                style="@style/Widget.MaterialComponents.Button.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Lặp lại"
                 android:textColor="@color/blue_light"
                 android:textStyle="normal"
-                app:backgroundTint="@color/no_color"
-                android:drawableLeft="@drawable/ic_calendar_24"/>
+                app:backgroundTint="@color/white"
+                app:icon="@drawable/ic_calendar_24"
+                app:iconTint="@color/blue_light"/>
         </LinearLayout>
 
         <TimePicker
