--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -37,8 +37,7 @@
         android:visibility="gone"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/no_color"
+        android:layout_height="55dp"
         android:weightSum="2"
         app:layout_constraintBottom_toBottomOf="@+id/rcv_alarms"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +46,7 @@
             android:id="@+id/btn_cancel_delete"
             app:backgroundTint="#BF000000"
             android:background="@drawable/ic_baseline_close_24"
+            android:gravity="center_vertical"
             android:layout_marginStart="20dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
